<resources>
    <string name="app_name">librarys</string>
    <string name="login_hit_user">请输入帐号</string>
    <string name="login_hit_password">请输入密码</string>
    <string name="login_register_user">注册用户</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_button">登录系统</string>
    <string name="login_activity_bottom_iamge">登录界面的最底部的图片</string>
    <string name="base_title">标题</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_student_number">填写学生证号</string>
    <string name="register_email_address">填写您的邮箱</string>
    <string name="register_password">填写登陆密码</string>
    <string name="register_already_user">已有账号</string>
    <string name="register_affirm_button">确认注册</string>
    <string name="register_identifying_code">请输入验证码</string>
    <string name="register_identifying_code_button">获取验证码</string>
    <string name="register_xianzhi_edittext_height">用于限制上面的EditText的高度</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_chinese_outside_reservation">预约/用座</string>
    <string name="main_english_outside_reservation">Make Appointment</string>
    <string name="main_chinese_me_center">我的中心</string>
    <string name="main_english_me_center">My Center</string>
    <string name="main_chinese_serach_seat">座位查询</string>
    <string name="main_english_serach_seat">Seat Query</string>
    <string name="main_chinese_booking_rules">预约规则</string>
    <string name="main_english_booking_rules">Cancellation Rules</string>
    <string name="main_chinese_stadium_seats">取消预约</string>
    <string name="main_english_stadium_seats">Cancel reservation</string>
    <string name="main_chinese_title_setting">系统设置</string>
    <string name="main_english_title_setting">System Settings</string>
    <string name="use_ceshi">测试用语</string>
    <string name="forget_password_find">请输入注册手机号</string>
    <string name="forget_password_find_affirm">确认</string>
    <string name="forget_phone_find">手机找回</string>
    <string name="forget_email_find">邮箱找回</string>
    <string name="select_area_first_floor">一楼</string>
    <string name="select_area_fourth_floor">四楼</string>
    <string name="select_area_thrid_floor">三楼</string>
    <string name="select_area_second_floor">二楼</string>
    <string name="select_area_top_free">空闲</string>
    <string name="select_area_top_appointment">预约</string>
    <string name="select_area_top_occupation">占用</string>
    <string name="select_area_reading_room">选择阅览室</string>
    <string name="dialog_select_area_title">请选择阅览室 !</string>
    <string name="select_area_top_no_use">不可用</string>
    <string name="main_chinese_statement_statistics">报表统计</string>
    <string name="main_english_statement_statistics">Statistics Report</string>
</resources>
