<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.minji.librarys.ui.SelectAreaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.58">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/thin_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_select_area_first"
                style="@style/TabsPublicStyle"
                android:background="@drawable/tabs_background_press"
                android:text="@string/select_area_first_floor"
                android:textColor="@color/thin_green" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_select_area_second"
                style="@style/TabsPublicStyle"
                android:background="@drawable/tabs_background_default"
                android:text="@string/select_area_second_floor"
                android:textColor="@color/white" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_select_area_thrid"
                style="@style/TabsPublicStyle"
                android:background="@drawable/tabs_background_default"
                android:text="@string/select_area_thrid_floor"
                android:textColor="@color/white" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:id="@+id/tv_select_area_fourth"
                style="@style/TabsPublicStyle"
                android:background="@drawable/tabs_background_default"
                android:text="@string/select_area_fourth_floor"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_select_area_show_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.47">

    </FrameLayout>

</LinearLayout>
